--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ body{
 	margin: 0;
 }
 
+.sidespace{
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
 
 h1,
 h2,
@@ -24,6 +28,20 @@ h3{
 	clear: both;
 	color: white;
 	margin: 0;
+}
+
+h1{
+	display:inline-block;
+	float:left;
+	clear: none;
+	width:86%;
+	padding-top:1rem;
+	padding-bottom:0.75rem;
+}
+
+h2{
+	padding-top:1.2rem;
+	padding-bottom:1.2rem;
 }
 
 figure{
@@ -38,23 +56,30 @@ figure{
 	background-color: #d98156;
 	clear: both;
 	overflow: hidden;
+	padding-bottom: 1em;
 }
 
 .grains{
 	float: left;
 	width: 40%;
+	margin-right:1rem;
+	margin-bottom: 1rem;
 }
 
 .cereals{
 	float: right;
 	clear: left;
 	width: 40%;
+	margin-left:1rem;
+	margin-bottom: 1rem;
 }
 
 .quinoa{
 	float: right;
 	clear: right;
 	width: 40%;
+	margin-left:1rem;
+	margin-bottom: 1rem;
 }
 
 .rice-oats{
@@ -67,22 +92,29 @@ figure{
 	width: 100%;
 }
 
+.corn-image{
+	padding-bottom: 1em;
+}
+
 .peanuts{
 	float: left;
-	width: 50%;
+	width: 65%;
 	clear: left;
+	margin-right:1em;
 }
 
 .beans{
 	float: left;
-	width: 50%;
+	width: 65%;
 	clear: left;
+	margin-right:1em;
 }
 
 .lentils{
 	float: left;
-	width: 50%;
+	width: 65%;
 	clear: left;
+	margin-right:1em;
 }
 
 .legumes{
@@ -92,6 +124,7 @@ figure{
 figcaption{
 	text-align: center;
 	color: white;
+	font-style: italic;
 }
 
 ol,
@@ -106,12 +139,16 @@ dt{
 	float: left;
 	width: 40%;
 	clear: left;
+	padding-bottom:1.5rem;
+	padding-left:0.75rem;
+	font-style: italic;
 }
 
 dd{
 	float: left;
 	width: 60%;
 	margin: 0;
+	font-style: italic;
 }
 
 footer{
@@ -126,4 +163,53 @@ ol{
 li{
 	float:left;
 	width: 33.33%;
+	padding-bottom:0.5rem;
+	padding-top:0.5rem;
+	font-size: 1.25rem;
+	border-top: 1px solid #a33f3a;
+}
+
+.cereal-line{
+	border-left: 1px solid #a33f3a;
+	border-right: 1px solid #a33f3a;
+}
+
+p{
+	line-height: 1.5rem;
+	font-size: 1.15rem
+}
+
+footer{
+	color: #e6ad99;
+	text-align:center;
+}
+
+.logo-left{
+	padding-top:1rem;
+	width: 7%;
+	float:left;
+	border: none;
+}
+
+.header-grains{
+	float:left;
+	margin:0;
+	width: 80%;
+}
+
+.clear{
+	clear:left;
+}
+
+img{
+	border: 1px solid #cccccc;
+}
+
+.no{
+	border:none;
+	}
+}
+
+nav a:hover {
+  background-color: #a93f35;
 }
