--- a/css/main.css
+++ b/css/main.css
@@ -217,3 +217,8 @@ padding-bottom: 0.5em;
 nav li:hover {
   background-color: #a93f35;
 }
+
+.side-space{
+	margin-left:0.75rem;
+	margin-right:0.75rem;
+}
