--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 html {
 	box-sizing: border-box;
 	font-family: 'Merriweather', serif;
+	margin: 0;
+	padding: 0;
 }
 
 *, *::before, *::after {
@@ -97,7 +99,7 @@ figure{
 	padding-bottom: 1em;
 }
 
-.peanuts{
+/*.peanuts{
 	float: left;
 	width: 65%;
 	clear: left;
@@ -116,7 +118,7 @@ figure{
 	width: 65%;
 	clear: left;
 	margin-right:1em;
-}
+}*/
 
 .legumes{
 	color: black;
@@ -134,7 +136,7 @@ a{
 	text-decoration: none;
 	color: white;
 }
-
+/*
 dt{
 	font-weight: bold;
 	float: left;
@@ -143,14 +145,52 @@ dt{
 	padding-bottom:1.5rem;
 	padding-left:0.75rem;
 	font-style: italic;
+}*/
+
+ul{
+	margin: 0;
+	padding: 0;
 }
 
+ul li{
+	clear: left;
+	list-style-type: none;
+		margin: 0;
+	padding: 0;
+	line-height: 1.5em;
+}
+
+ul li img{
+	width:25%;
+	float: left;
+	margin: 0 0.75rem 2rem 0;
+	padding: 0;
+}
+
+ul p{
+	padding: 0;
+}
+
+.floated{
+	float: left;
+	font-weight: bold;
+			margin: 0;
+	padding: 0;
+}
+
+.also-floated{
+	float:left;
+			margin: 0;
+	padding: 0;
+}
+
+/*
 dd{
 	float: left;
 	width: 60%;
 	margin: 0;
 	font-style: italic;
-}
+}*/
 
 footer{
 	clear: left;
@@ -201,11 +241,12 @@ ol{
 	padding: 0;
 }
 
-li{
+nav li{
 	float:left;
 	width: 33.33%;
 	font-size: 1.25em;
 	border-top: 1px solid #a33f3a;
+
 }
 
 nav a{
